load("//buckaroo:defs.bzl", "buckaroo_deps")

cc_library(
  name = "chrono",
  includes = [
    "include",
  ],
  hdrs = glob([
    "include/**/*.hpp",
    "include/**/*.ipp",
    "include/**/*.inl",
  ]),
  srcs = glob([
    "src/**/*.cpp",
  ]),
  deps = buckaroo_deps(),
  visibility = [
    '//visibility:public',
  ],
)
